--- a/inst/template/word_template.Rmd
+++ b/inst/template/word_template.Rmd
@@ -36,13 +36,13 @@ library(knitr)
 
 testSVY %>%
   create_op() %>%
-  estimate_op_all(w = testPSU, indicators = "demo", replicates = 19) %>%
+  estimate_op(w = testPSU, indicators = "demo", replicates = 19) %>%
   select(LABEL:UCL.FEMALES) %>%
   kable(digits = 2)
 ```
 
 ```{r respondentTable}
-resultsDF <- estimate_op_all(x = indicators.ALL, w = testPSU, indicators = "demo", replicates = 19) %>%
+resultsDF <- estimate_op(x = indicators.ALL, w = testPSU, indicators = "demo", replicates = 19) %>%
   select(LABEL:UCL.FEMALES)
 
 knitr::kable(x = resultsDF)
