--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ install.packages(
 or from [GitHub](https://github.com/rapidsurveys/oldr) with:
 
 ```{r install-github, eval = FALSE}
-if (!require("pak")) install.packages("pak")
+if (!require(pak)) install.packages("pak")
 pak::pak("rapidsurveys/oldr")
 ```
 
